change name package

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "alchemist/nestedset",
+    "name": "alchemistlife22/nestedset",
     "description": "Nested Set Model for Laravel",
     "type": "laravel",
     "version": "1.0.0",
